--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,10 +13,9 @@ jobs:
       uses: actions/setup-python@v1
 
     - name: Install dependencies
-      run: pip3 install -U git+https://github.com/online-judge-tools/verification-helper@master
-
+      run: pip3 install -U git+https://github.com/12tqian/verification-helper@main
     - name: Run tests
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: oj-verify docs
+      run: oj-verify all -j 2
