--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,7 +13,8 @@ jobs:
       uses: actions/setup-python@v1
 
     - name: Install dependencies
-      run: pip3 install -U online-judge-verify-helper
+      run: pip3 install -U git+https://github.com/12tqian/verification-helper-1@main
+      # run: pip3 install -U online-judge-verify-helper
 
     - name: Run tests
       env:
