--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,11 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "string_view": "cpp",
+        "ranges": "cpp",
+        "span": "cpp"
     }
 }
