--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: jekyll-theme-minima
+theme: jekyll-theme-architect
 title: 12tqian's Library
