[auto-verifier] docs commit 0a1568e1aa075922a2384cc1bfa54b362ef334c4

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: jekyll-theme-architect
+theme: jekyll-theme-hacker
 title: 12tqian's Library
