--- a/.verify-helper/docs/_config.yml
+++ b/.verify-helper/docs/_config.yml
@@ -1,3 +1,7 @@
 exclude: ['ahc.py', 'bundle.py', 'compress.py']
 title: 12tqian's Library
 theme: minima
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
