[auto-verifier] docs commit c15ed3bd23e03afa4589bfd27fd5025f42400885

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ exclude:
 - bundle.py
 - compress.py
 plugins:
-- jemoji
-- jekyll-redirect-from
+- jekyll-feed
+- jekyll-seo-tag
 theme: minima
 title: 12tqian's Library
