[auto-verifier] docs commit 6ba3c0c27054e3cd3875b67d80b4700498a002fb

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ exclude:
 - bundle.py
 - compress.py
 plugins:
-- jekyll-feed
-- jekyll-seo-tag
+- jemoji
+- jekyll-redirect-from
 theme: minima
 title: 12tqian's Library
