[auto-verifier] docs commit 945c65d153313da0c3ed86cbac645d8922b833c0

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ exclude:
 - bundle.py
 - compress.py
 plugins:
-- jemoji
-- jekyll-redirect-from
+- jekyll-seo-tag
 theme: minima
 title: 12tqian's Library
