[auto-verifier] docs commit d97bc37876a44b6c0e54b6442d5547fb6cb3ce0a

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude:
 - bundle.py
 - compress.py
 plugins:
-- jekyll-seo-tag
+- jekyll-feed
 show_excerpts: false
 theme: minima
 title: 12tqian's Competitive Programming Library
