[auto-verifier] docs commit 0008088b44f45c03d71034bbfb8330e57a440883

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude:
 - bundle.py
 - compress.py
 plugins:
-- jekyll-feed
-show_excerpts: false
-theme: minima
+- jemoji
+- jekyll-redirect-from
+theme: hacker
 title: 12tqian's Competitive Programming Library
