--- a/.verify-helper/docs/_config.yml
+++ b/.verify-helper/docs/_config.yml
@@ -1,7 +1,6 @@
 exclude: ['ahc.py', 'bundle.py', 'compress.py']
 title: 12tqian's Competitive Programming Library
-theme: jekyll-theme-hacker
-
+theme: minima
 author:
   name: Timothy Qian
   email: 12tqian@gmail.com
