--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: hacker
+theme: jekyll-theme-hacker
 title: 12tqian's Competitive Programming Library
