[auto-verifier] docs commit 97af680c7dc971f66b00a6f2dd1e43f5adac628f

--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: jekyll-theme-hacker
+theme: minima
 title: 12tqian's Competitive Programming Library
