[auto-verifier] docs commit 8d4cb9eba0cf3327137f2a7d91e08be1c446005b

--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: minima
+theme: jekyll-theme-minimal
 title: 12tqian's Competitive Programming Library
