--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -26,6 +26,6 @@ jobs:
         DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
         OJ_USERNAME: ${{ secrets.OJ_USERNAME }}
         OJ_PASSWORD: ${{ secrets.OJ_PASSWORD }}
-        # YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
+        YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
       run: oj-verify all -j 2
